fixed stupid margin issue on mobile, I think

--- a/src/Pages/siteholder.css
+++ b/src/Pages/siteholder.css
@@ -1,5 +1,4 @@
 
-html, body {width: auto!important; margin:0;} 
 .content{
     display: flex;
     flex-direction: column;
