--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+html, body {width: auto!important; margin:0;} 
 body {
   margin: auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
